# RKGame

./: .gitignore  Being.c  Being.h  CMakeLists.txt  Player.c  Player.h  Projectile.c  Projectile.h  README.md  Scroll.c  Scroll.h  World.c  World.h  enum.h  event.c  event.h  function.c  function.h  game.c  game.h  header.h  macros.h  main.c  render.c  render.h  render_macros.h  types.h
src/: Being.c  Being.h  CMakeLists.txt  Player.c  Player.h  Projectile.c  Projectile.h  Scroll.c  Scroll.h  World.c  World.h  common.h  event.c  event.h  function.c  function.h  game.c  game.h  header.h  macros.h  main.c  render.c  render.h  sound.c  sound.h
tests/: CMakeLists.txt  tests.cpp
